fixed nav bad, mad flex box and changed overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow: hidden;
 
 }
 
@@ -11,18 +12,35 @@ body{
     color:white;
     width: 100vw;
     height: 5vh;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
+    margin: 0;
 }
 
 #logout{
     border:none;
-    position:absolute;
     top:0;
     right:0;
     height:5vh;
     border:none;
-    display: inline;
+    display: flex;
+    justify-content: flex-end;
     padding:1vh;
+    flex: 2;
+}
 
+#client_name{
+    border:none;
+    top:0;
+    right:0;
+    height:5vh;
+    border:none;
+    display: flex;
+    justify-content: flex-end;
+    padding:1vh;
+    flex: 3;
+    margin-right: 1vw;
 }
 
 #tlu_logo{
@@ -165,3 +183,5 @@ a {
     justify-content: space-evenly;
     display: inline-grid;
 }
+
+
